# codex_mcp

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICK_START.md  README.md  VSCODE_SETUP.md  VSCode_예시  mcp.json  package-lock.json  package.json  pyproject.toml  매일_작업_시작_체크리스트.md  배경설명
configs/: domain_randomization.yaml  reward_config.yaml  roarm_joints.yaml
context_bridge/: CONTEXT_BUNDLE  ContextBridge 실행 가이드  ContextBridgeMcp.md  context_bridge_mcp.py
docs/: 2025-09-18_RTX5090_GPU최적화_Phase1완료.md  ARCH_DECISION_DUAL_ENV.md  CONTEXT_HANDOFF_2025-10-11.md  IPC_BRIDGE.md  ISAAC_PRECHECK.md  OBSERVABILITY.md  PERF_BASELINE.md  RISK_AND_PLAN.md  ROADMAP.md  ROS2_BRIDGE.md  SESSION_SUMMARY_2025-10-09.md  SESSION_SUMMARY_2025-10-11.md  SIM2REAL_GUIDE.md  STATUS.md  STEP1_CHECKLIST.md  TEST_ENV_ISOLATION.md  isaacsim_pipeline_guide.md  launcher_refactor_plan.md  오늘_작업_요약.md  작업전_확인.md
logs/: README.md
mcp_servers/: isaac_controller_server.py
roarm_app/: __init__.py  cli.py
scripts/: activate_isaacsim_env.sh  add_physx_api.py  analyze_hash_drift.py  analyze_rollouts.py  apply_articulation_root.py  bench_transport.py  check_headless_log.py  check_isaac_import.py  check_perf_threshold.py  check_pxr_kit.py  clean_articulation_roots.py  cleanup_headless_dumps.py  convert_urdf_to_usd.py  generate_perf_baseline.py  inspect_usd.py  ipc_policy_gateway.py  isaac_precheck.sh  isaac_roarm_loop_stub.py  launch_isaacsim_gui.sh  manage_isaacsim_extensions.py  measure_round_trip.py  open_roarm_m3_gui.py  play_roarm_policy.py  pre_session_check.py  print_isaac_version.py  roarm_env_diag.sh  run_ipc_gateway_clean.sh  run_isaac_tool.sh  run_mcp_isaac.sh  run_roarm_m3_headless.py  run_tests_local.sh  run_training.sh  run_verify_usd_roarm_m3.sh  usd_patch_articulation.py  verify_usd_roarm_m3.py  view_roarm.py  xacro_to_usd.py
sim/: inspect_stage.py  load_roarm.py
src/: index.ts
tests/: conftest.py  dummy_policy_alert.json  dummy_policy_alt.json  test_deadline_escalation.py  test_domain_randomizer.py  test_domainrand_coverage.py  test_dummy_env.py  test_inspect_stage_placeholder.py  test_ipc_gateway_integration.py  test_isaac_api_adapter.py  test_isaac_env_placeholder.py  test_joint_api_fallback.py  (+11 more)
(+53 files in other folders)
